# AI-Powered-Smart-Glasses

./: .env  .gitattributes  .gitignore  CMakeLists.txt  CURSOR_FULL_CUDA_INTEGRATION.md  Run_SmartGlassesHUD.bat  build_and_run.ps1  camera_log.txt  download_cuda_models.py  fix_sign_language.ps1  fix_sign_language.sh  install_sign_language.sh  ipa_100percent_master_plan.html  requirements.txt  setup.ps1  smart_class_requirements_doc.html
Faces/Sreekanth K/: Sreekanth K_all_encodings.npy  Sreekanth K_encoding.npy
docs/: INSTALL_CUDA.md  README.md  README_CAMERA_INTERFACE.md  SETUP_BUILD.md
include/: AudioCapture.h  CameraManager.hpp  Config.hpp  FaceDetector.hpp  HUDLayer.hpp  HUDLayer_Original.hpp.bak  ModelRegistry.hpp  OCREngine.h  OnnxDetector.hpp  Pipeline.hpp  PythonBridge.hpp  ResultsStore.h  STTEngine.h  SignLanguageDetector.hpp  SignLanguageTranslator.hpp  SpeechService.hpp  TTSEngine.h  TTSQueue.h  TTSService.hpp  TranslationEngine.h  TranslationQueue.h  TranslationTaskManager.hpp  VoiceAssistMode.hpp  httplib.h  json.hpp  whisper.h
include/camera/: camera_manager.h
include/face/: face_detector.h  face_encoder.h  identity_store.h
include/hud/: hud_layer.h  voice_assist.h
include/object/: ObjectEncoder.hpp  ObjectRegistry.hpp  object_detector.h  object_store.h
include/ocr/: ocr_engine.h
include/speech/: stt_engine.h  tts_engine.h
include/translation/: translation_manager.h
include/utils/: image_utils.h  ort_session.h
models/yolo/: yolov8x_fp16.onnx
scripts/python/: ocr_onnx_service.py  stt_service.py
src/: AudioCapture.cpp  CameraManager.cpp  Config.cpp  FaceDetector.cpp  HUDLayer.cpp  HUDLayer_Original.cpp.bak  ModelRegistry.cpp  OCREngine.cpp  OnnxDetector.cpp  Pipeline.cpp  PythonBridge.cpp  PythonBridge.hpp  ResultsStore.cpp  STTEngine.cpp  SignLanguageDetector.cpp  SignLanguageTranslator.cpp  SpeechService.cpp  TTSEngine.cpp  TTSQueue.cpp  TTSService.cpp  TranslationEngine.cpp  TranslationQueue.cpp  TranslationTaskManager.cpp  VoiceAssistMode.cpp  main.cpp  object_detection_verify.cpp
src/camera/: camera_manager.cpp
src/face/: face_detector.cpp  face_encoder.cpp  identity_store.cpp
src/hud/: hud_layer.cpp  voice_assist.cpp
src/object/: ObjectRegistry.cpp  OnnxDetector.cpp  object_detector.cpp  object_store.cpp
src/ocr/: ocr_engine.cpp
src/speech/: stt_engine.cpp  tts_engine.cpp
src/translation/: translation_manager.cpp
src/utils/: image_utils.cpp  ort_session.cpp
tools/: object_detection_verify.cpp
